Refactor and document IMAP client